# linear-srgb

./: .gitignore  Cargo.toml  README.md  perf.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
examples/: accuracy_comparison.rs  basic.rs  generate_all_luts.rs  generate_poly_coeffs.rs
src/: accuracy.rs  const_luts.rs  const_luts_u16.rs  default.rs  fast_math.rs  lib.rs  lut.rs  mlaf.rs  scalar.rs  simd.rs  targets.rs  transfer.rs
src/alt/: accuracy.rs  fast_math.rs  imageflow.rs  mod.rs
src/mage/: mod.rs  x86_64.rs
src/rites/: mod.rs  x16.rs  x4.rs  x8.rs
