[package]
name = "linear-srgb"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Fast linear↔sRGB color space conversion with FMA acceleration and LUT support"
repository = "https://github.com/imazen/linear-srgb"
keywords = ["color", "srgb", "linear", "gamma", "conversion"]
categories = ["graphics", "multimedia::images"]

[dependencies]
num-traits = "0.2"
wide = "1.1"
bytemuck = "1.21"
multiversion = "0.8"
multiversed = { path = "/home/lilith/work/multiversed", default-features = false, features = ["x86-64-v3"] }
pxfm = "0.1"

[dev-dependencies]
criterion = "0.5"
wide = "1.1"

[features]
default = []
# Include alternative/experimental implementations for benchmarking
alt = []

[[bench]]
name = "benchmarks"
harness = false
