[package]
name = "linear-srgb"
version = "0.3.1"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Fast linear↔sRGB color space conversion with FMA acceleration and LUT support"
repository = "https://github.com/imazen/linear-srgb"
keywords = ["color", "srgb", "linear", "gamma", "conversion"]
categories = ["graphics", "multimedia::images", "no-std"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
wide = "1.1"
bytemuck = "1.21"
multiversion = { version = "0.8", default-features = false }
multiversed = { version = "0.1", default-features = false, features = ["x86-64-v3", "x86-64-v4", "aarch64-basic"] }

[dev-dependencies]
criterion = "0.8"

[features]
default = ["std"]
# Enable std library (required for runtime SIMD dispatch)
std = ["num-traits/std", "multiversion/std"]
# Include alternative/experimental implementations for benchmarking
alt = []
# Use unsafe variants for maximum performance (union-based bit manipulation, unchecked indexing)
unsafe_simd = []

[[bench]]
name = "benchmarks"
harness = false
