[package]
name = "linear-srgb"
version = "0.4.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Fast linear↔sRGB color space conversion with FMA acceleration and LUT support"
repository = "https://github.com/imazen/linear-srgb"
keywords = ["color", "srgb", "linear", "gamma", "conversion"]
categories = ["graphics", "multimedia::images", "no-std"]

[dependencies]
num-traits = { version = "0.2", default-features = false, features = ["libm"] }
wide = "1.1"
bytemuck = "1.21"
archmage = { version = "0.7", path = "../archmage", default-features = false, features = ["macros", "avx512"] }
magetypes = { version = "0.7", path = "../archmage/magetypes", default-features = false, features = ["avx512"] }

[dev-dependencies]
criterion = "0.8"

[features]
default = ["std"]
# Enable std library (required for runtime SIMD dispatch)
std = ["num-traits/std", "archmage/std"]
# Include alternative/experimental implementations for benchmarking
alt = []
# Use unsafe variants for maximum performance (union-based bit manipulation, unchecked indexing)
unsafe_simd = []
# Token-based API using archmage (zero dispatch overhead)
mage = []

[[bench]]
name = "benchmarks"
harness = false

[[example]]
name = "accuracy_comparison"
required-features = ["std", "alt"]

[[example]]
name = "generate_all_luts"
required-features = ["std"]
